# spfy

./: .gitignore  Cargo.toml  text  todo
src/: main.rs  setup.rs  spfy.rs
src/commands/: main.rs
