[package]
name = "spfy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.25.0", features = ["full"] }
serde = { version = "1.0.152", features = ["derive"] }
pcap = { version = "1.0.0", features = ["capture-stream", "futures", "tokio"] }
dotenv = "0.15.0"
serde_json = "1.0.93"
etherparse = "0.13.0"
reqwest = "0.11.20"
bytes = "1.5.0"
nanoid = "0.4.0"
